Refactor: Rebuilt filehandler class to work with and use the DataObject class

--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -58,7 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="code\DebugUtils.cs" />
-    <Compile Include="code\FileHandler.cs" />
+    <Compile Include="code\ReadData.cs" />
+    <Compile Include="code\DataObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="code\Welcome.cs" />
