--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -60,11 +60,11 @@
     <Compile Include="Utilities\SobelFilter.cs" />
     <Compile Include="Utilities\ImageUtils.cs" />
     <Compile Include="Utilities\DebugUtils.cs" />
-    <Compile Include="code\ReadData.cs" />
-    <Compile Include="code\DataObject.cs" />
+    <Compile Include="Code\ReadData.cs" />
+    <Compile Include="Models\DataObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="code\Welcome.cs" />
+    <Compile Include="Code\Welcome.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
