--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -47,6 +47,9 @@
     <Reference Include="OpenCvSharp.UserInterface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6adad1e807fea099, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenCvSharp3-AnyCPU.3.3.1.20171117\lib\net46\OpenCvSharp.UserInterface.dll</HintPath>
     </Reference>
+    <Reference Include="OpenMTRUtilities">
+      <HintPath>..\OpenMTRUtilities\bin\Debug\OpenMTRUtilities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,21 +60,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Utilities\CannyFilter.cs" />
-    <Compile Include="Utilities\SobelFilter.cs" />
-    <Compile Include="Utilities\ImageUtils.cs" />
-    <Compile Include="Utilities\DebugUtils.cs" />
     <Compile Include="Code\ReadData.cs" />
-    <Compile Include="Models\DataObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\Welcome.cs" />
+    <Compile Include="Utilities\DebugUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
