--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -57,12 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Meter.cs" />
     <Compile Include="Utilities\CannyFilter.cs" />
     <Compile Include="Utilities\SobelFilter.cs" />
     <Compile Include="Utilities\ImageUtils.cs" />
     <Compile Include="Utilities\DebugUtils.cs" />
     <Compile Include="Code\ReadData.cs" />
-    <Compile Include="Models\DataObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\Welcome.cs" />
