--- a/OpenMTRDemo/OpenMTRDemo.csproj
+++ b/OpenMTRDemo/OpenMTRDemo.csproj
@@ -60,6 +60,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\BaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\BaseForm.Designer.cs">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ExpandedImageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ExpandedImageForm.Designer.cs">
+      <DependentUpon>ExpandedImageForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TiledFiltersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TiledFiltersForm.Designer.cs">
+      <DependentUpon>TiledFiltersForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\KeyValPair.cs" />
+    <Compile Include="Models\LoadSaveDialog.cs" />
     <Compile Include="Utilites\DemoUtilities.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -69,6 +89,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\BaseForm.resx">
+      <DependentUpon>BaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ExpandedImageForm.resx">
+      <DependentUpon>ExpandedImageForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TiledFiltersForm.resx">
+      <DependentUpon>TiledFiltersForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
