--- a/OpenMTRDemo/OpenMTRDemo.csproj
+++ b/OpenMTRDemo/OpenMTRDemo.csproj
@@ -66,12 +66,6 @@
     <Compile Include="Forms\BaseForm.Designer.cs">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ExpandedImageForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ExpandedImageForm.Designer.cs">
-      <DependentUpon>ExpandedImageForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\TiledFiltersForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,25 +76,22 @@
     <Compile Include="Models\LoadSaveDialog.cs" />
     <Compile Include="Models\MeterImage.cs" />
     <Compile Include="Utilites\DemoUtilities.cs" />
-    <Compile Include="Forms\MainForm.cs">
+    <Compile Include="Forms\ExpandedImageForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\MainForm.designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <Compile Include="Forms\ExpandedImageForm.designer.cs">
+      <DependentUpon>ExpandedImageForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ExpandedImageForm.resx">
-      <DependentUpon>ExpandedImageForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\TiledFiltersForm.resx">
       <DependentUpon>TiledFiltersForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ExpandedImageForm.resx">
+      <DependentUpon>ExpandedImageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
