--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Code\Odometer.cs" />
     <Compile Include="Models\Meter.cs" />
+    <Compile Include="Models\MeterMetaData.cs" />
     <Compile Include="Utilities\ImageUtils.cs" />
     <Compile Include="Utilities\DebugUtils.cs" />
     <Compile Include="Code\ReadData.cs" />
