--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\Welcome.cs" />
+    <Compile Include="Utilities\MathUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
