--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Code\Detect.cs" />
+    <Compile Include="Code\Dial.cs" />
     <Compile Include="Code\Odometer.cs" />
     <Compile Include="Models\Meter.cs" />
     <Compile Include="Models\MeterMetaData.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\Welcome.cs" />
+    <Compile Include="Utilities\MathUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
