--- a/OpenMTRDemo/OpenMTRDemo.csproj
+++ b/OpenMTRDemo/OpenMTRDemo.csproj
@@ -102,6 +102,12 @@
     <Compile Include="Filters\SobelFilter.Designer.cs">
       <DependentUpon>SobelFilter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Filters\PerspectiveFilter.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Filters\PerspectiveFilter.Designer.cs">
+      <DependentUpon>PerspectiveFilter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Filters\LaplacianFilter.resx">
       <DependentUpon>LaplacianFilter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Filters\PerspectiveFilter.resx">
+      <DependentUpon>PerspectiveFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
