feat: added rotation to shear filter

--- a/OpenMTRDemo/OpenMTRDemo.csproj
+++ b/OpenMTRDemo/OpenMTRDemo.csproj
@@ -90,11 +90,11 @@
     <Compile Include="Filters\LaplacianFilter.Designer.cs">
       <DependentUpon>LaplacianFilter.cs</DependentUpon>
     </Compile>
-    <Compile Include="Filters\ShearFilter.cs">
+    <Compile Include="Filters\AffineFilter.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Filters\ShearFilter.Designer.cs">
-      <DependentUpon>ShearFilter.cs</DependentUpon>
+    <Compile Include="Filters\AffineFilter.Designer.cs">
+      <DependentUpon>AffineFilter.cs</DependentUpon>
     </Compile>
     <Compile Include="Filters\ScharrFilter.cs">
       <SubType>UserControl</SubType>
@@ -150,8 +150,8 @@
     <EmbeddedResource Include="Filters\LaplacianFilter.resx">
       <DependentUpon>LaplacianFilter.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Filters\ShearFilter.resx">
-      <DependentUpon>ShearFilter.cs</DependentUpon>
+    <EmbeddedResource Include="Filters\AffineFilter.resx">
+      <DependentUpon>AffineFilter.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Filters\PerspectiveFilter.resx">
       <DependentUpon>PerspectiveFilter.cs</DependentUpon>
