--- a/OpenMTRDemo/OpenMTRDemo.csproj
+++ b/OpenMTRDemo/OpenMTRDemo.csproj
@@ -78,6 +78,18 @@
     <Compile Include="Filters\CannyFilter.Designer.cs">
       <DependentUpon>CannyFilter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Filters\DilateMorph.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Filters\DilateMorph.Designer.cs">
+      <DependentUpon>DilateMorph.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Filters\ErodeMorph.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Filters\ErodeMorph.Designer.cs">
+      <DependentUpon>ErodeMorph.cs</DependentUpon>
+    </Compile>
     <Compile Include="Filters\GaussianFilter.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -101,6 +113,18 @@
     </Compile>
     <Compile Include="Filters\AffineFilter.Designer.cs">
       <DependentUpon>AffineFilter.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Filters\MorphExClosing.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Filters\MorphExClosing.Designer.cs">
+      <DependentUpon>MorphExClosing.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Filters\MorphExOpening.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Filters\MorphExOpening.Designer.cs">
+      <DependentUpon>MorphExOpening.cs</DependentUpon>
     </Compile>
     <Compile Include="Filters\ScharrFilter.cs">
       <SubType>UserControl</SubType>
@@ -155,6 +179,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Filters\CannyFilter.resx">
       <DependentUpon>CannyFilter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Filters\ErodeMorph.resx">
+      <DependentUpon>ErodeMorph.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Filters\GaussianFilter.resx">
       <DependentUpon>GaussianFilter.cs</DependentUpon>
