--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Code\Dial.cs" />
     <Compile Include="Code\Digital\American.cs" />
     <Compile Include="Code\Odometer.cs" />
-    <Compile Include="Exceptions\PassFailedException.cs" />
+    <Compile Include="Exceptions\PassFailException.cs" />
     <Compile Include="Models\Meter.cs" />
     <Compile Include="Models\MeterMetaData.cs" />
     <Compile Include="Utilities\ImageUtils.cs" />
