feat: Branch odometer reads (#58)
* [Matt] Fix: detect and fix image skew

* fix: remove image skew correction. (will come back to this)

* refactor: Odometer now reads from meter objects

* wip

* wip

* fix: Fixed logic of GetAngle method

* fix: Spacing of GetAngle

* chore: Handle manufacturer workflow

* revert: Reverting odometer class back to master

* refactor: Made it so we can get fix the image skew of just Mat objects

* feat: Digit extraction

* fix: Only convert to grayscale if we aren't already there

* feat: Added first pass

* refactor: Odometer now extracts from digits

* refactor: cleanup code

* fix: unnecessary conversion to list

* revert: revert welcome back to normal

* fix: removed debug code

* refactor: Refactored ExtractDigits

* refactor: Refactored ReadDigits

* refactor: segments method

--- a/OpenMTR/OpenMTR.csproj
+++ b/OpenMTR/OpenMTR.csproj
@@ -63,7 +63,9 @@
   <ItemGroup>
     <Compile Include="Code\Detect.cs" />
     <Compile Include="Code\Dial.cs" />
+    <Compile Include="Code\Digital\American.cs" />
     <Compile Include="Code\Odometer.cs" />
+    <Compile Include="Exceptions\PassFailException.cs" />
     <Compile Include="Models\Meter.cs" />
     <Compile Include="Models\MeterMetaData.cs" />
     <Compile Include="Utilities\ImageUtils.cs" />
